fix: add z-index for header

--- a/templates/commerce/header.scss
+++ b/templates/commerce/header.scss
@@ -8,6 +8,7 @@
   width: 100%;
   padding-top: 25px;
   margin-bottom: 27px;
+  z-index: 99;
 }
 
 .header_size {
